--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="button_two">Button two</string>
     <string name="my_default_text_from_activity">My Default Text from Activity</string>
+    <string name="Services">Button</string>
+    <string name="start_service">start service</string>
 </resources>
