--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="start_service">start service</string>
     <string name="lesson_95_start">lesson 95 start</string>
     <string name="startandroidbroadcastexample">StartAndroidBroadCastExample</string>
+    <string name="down">Down</string>
+    <string name="up">Up</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
 </resources>
