--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="up">Up</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
+    <string name="start">Start</string>
 </resources>
